# contento

./: .dockerignore  .gitignore  .npmrc  CLAUDE.md  Dockerfile  agentdb.rvf  eslint.config.mjs  instructions.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt  ruvector.db  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  agentdb.rvf  fly.toml  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: clickhouse.ts  index.ts  kafka-producer.ts  queue.ts  server.ts  test-setup.ts
apps/instagram-agent/: package.json  tsconfig.json
apps/instagram-agent/src/: index.ts  worker.test.ts  worker.ts
apps/posting-service/: fly.toml  package.json
apps/posting-service/src/: index.ts  s3.ts  worker.ts
apps/render-worker/: fly.toml  package.json  tsconfig.json  vitest.config.ts
apps/render-worker/src/: index.ts  s3-client.ts  worker.ts
apps/scheduler/: fly.toml  package.json
apps/scheduler/src/: digest.ts  index.ts  worker.test.ts  worker.ts
apps/trend-analyzer/: package.json  tsconfig.json
apps/trend-analyzer/src/: index.ts  worker.ts
apps/trend-fetcher/: Dockerfile  package.json  tsconfig.json
apps/trend-fetcher/src/: declarations.d.ts  index.ts  publisher.ts  worker.ts
apps/video-worker/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/video-worker/scripts/: lipsync-ab.ts  render-smoke.ts
apps/video-worker/src/: index.ts  remotion-stitch.ts  s3-client.ts  stitch-props.test.ts  stitch-props.ts  stitch.ts  video-worker.test.ts  webhook-handler.ts  worker.ts
apps/web/: .env.example  .gitignore  next.config.ts  package.json  tsconfig.json
apps/web/src/: middleware.ts
docs/superpowers/plans/: 2026-05-08-trend-fetchers.md  2026-06-18-postanalytics.md  (+13 more)
infra/: .env.example  Caddyfile  README.md  docker-compose.yml  karapace.json
scripts/: deploy.sh
workers/analytics-py/: Dockerfile  README.md  pyproject.toml  requirements.txt
workers/analytics-py/src/contento_analytics/: clickhouse_client.py  main.py  models.py
workers/mention-py/: Dockerfile  pyproject.toml
workers/mention-py/src/contento_mention/: analyzer.py  main.py
workers/mention-py/src/contento_mention/sources/: reddit.py  web.py
workers/ml-py/: Dockerfile  README.md  pyproject.toml  requirements.txt
workers/ml-py/src/contento_ml/: main.py  minio_client.py  models.py  trainer.py
workers/scrapers-py/: Dockerfile  README.md  pyproject.toml
workers/scrapers-py/src/contento_scrapers/: __init__.py  main.py  models.py
workers/scrapers-py/src/contento_scrapers/sources/: __init__.py  google_trends.py  reddit.py  rss.py  youtube.py
workers/whisper-py/: README.md  requirements.txt
(+138 files in other folders)
