[project]
name = "contento-ml"
version = "0.1.0"
description = "Contento ML worker — LoRA fine-tuning via Kafka, MinIO assets, Postgres job tracking"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.11.0",
    "pydantic>=2.7.0",
    "boto3>=1.34.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "diffusers>=0.27.0",
    "peft>=0.10.0",
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
cpu = []

[project.scripts]
contento-ml = "contento_ml.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contento_ml"]
