[project]
name = "contento-scrapers"
version = "0.1.0"
description = "Contento trend scraper service — scrapes Google Trends, YouTube, Reddit and RSS feeds and emits TrendDiscovered Kafka events"
requires-python = ">=3.11"
dependencies = [
    "pytrends>=4.9.2",
    "praw>=7.7.1",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "aiokafka>=0.11.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
contento-scrapers = "contento_scrapers.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contento_scrapers"]
